--- a/index.html
+++ b/index.html
@@ -3,18 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Teatro GORKI - Peter Pan O Musical</title>
-    <meta
-      name="description"
-      content="Teatro GORKI apresenta Peter Pan O Musical - Uma experiência teatral inesquecível"
-    />
+    <title>Grupo Gorki</title>
+    <meta name="description" content="Teatro GORKI " />
     <meta name="author" content="Teatro GORKI" />
 
     <meta property="og:title" content="Teatro GORKI - Peter Pan O Musical" />
-    <meta
-      property="og:description"
-      content="Teatro GORKI apresenta Peter Pan O Musical - Uma experiência teatral inesquecível"
-    />
+    <meta property="og:description" content="Teatro GORKI " />
     <meta property="og:type" content="website" />
 
     <meta name="twitter:card" content="summary_large_image" />
